# TE3001B_Actividades_del_Reto

./: .gitignore  .gitmodules  MICROROS_SETUP.md  MOTOR_NODE.md  README.md  setup_microros.sh
motrol_control/install/: local_setup.sh  setup.sh
motrol_control/install/custom_interfaces/share/custom_interfaces/: local_setup.sh  package.sh
motrol_control/install/motor_control/share/motor_control/: package.sh
motrol_control/log/: latest_build
motrol_control/src/motor_control/launch/: motor_launch.py
motrol_control/src/motor_control/motor_control/: controller.py
ros2_ws/src/motor_control/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/motor_control/arduino/: motor_node.ino
ros2_ws/src/motor_control/launch/: motor_monitor.launch.py
ros2_ws/src/motor_control/motor_control/: motor_commander.py  motor_monitor.py
ros2_ws/src/signal_proc/launch/: challenge_launch.py
ros2_ws/src/signal_proc/signal_proc/: signal_gen.py  signal_proc.py
